# hack-the-supergraph

./: .gitignore  .graphqlconfig  README.md  hack-the-supergraph.apollo-workbench
.apollo/: federation.graphql
.github/workflows/: check-schema.yaml  graphos-readme.yaml  graphos.yaml  subgraph-orders-deploy.yaml  subgraph-orders-test.yaml  subgraph-products-deploy.yaml  subgraph-products-test.yaml  subgraph-reviews-deploy.yaml  subgraph-reviews-test.yaml  subgraph-shipping-deploy.yaml  subgraph-shipping-test.yaml  subgraph-users-deploy.yaml  subgraph-users-test.yaml
apollo-lounge-start/: README.md
apollo-lounge-start/start/: package.json
cosmic-cove/: README.md  package.json  schema.graphql
cosmic-cove/javascript/: README.md  jest.config.js  package-lock.json  package.json  schema.graphql
cosmic-cove/no-code/: README.md  schema.graphql  schema2.graphql
cosmic-cove/python/: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
cosmic-cove/python/.github/workflows/: check-schema.yml  publish-schema.yml  test.yml
cosmic-cove/python/api/: __main__.py  schema.py
cosmic-cove/python/tests/api/: test_query.py
cosmic-cove/start/: package.json
e-commerce/orders/: orders.graphql
solar-seas/: Cargo.toml  README.md  celestialMap.json  package.json  schema.graphql
solar-seas-javascript/: README.md
solar-seas-rust/: README.md  schema.graphql
space-beach/: .gitignore  README.md  beaches.js  schema.graphql
start/: README.md  package.json  schema.graphql
website/: .eslintrc.json  package-lock.json  package.json
(+117 files in other folders)
